--- a/package.json
+++ b/package.json
@@ -36,15 +36,14 @@
     "@angular/router": "^7.0.0",
     "codelyzer": "~5.0.0",
     "core-js": "^2.4.1",
-    "del": "^4.0.0",
-    "gulp": "^3.9.0",
-    "gulp-bump": "^3.1.0",
+    "del": "^4.1.1",
+    "gulp": "^4.0.1",
+    "gulp-bump": "^3.1.3",
     "gulp-typescript": "^5.0.1",
     "merge2": "^1.2.3",
     "msal": "^0.2.4",
-    "rxjs": "^6.3.0",
+    "rxjs": "^6.5.0",
     "tslint": "^5.15.0",
-    "typedoc": "^0.14.2",
     "typescript": "3.1.6",
     "zone.js": "^0.8.26"
   },
@@ -60,5 +59,5 @@
     "build": "gulp clean && gulp compile && gulp copy",
     "publish": "npm run build && gulp copy && gulp publish"
   },
-  "description": "Copied: Microsoft Authentication Library for Angular (Preview)\r ========================================================="
+  "description": "@azure/angular-msal clone with support for Angular 6+ and Internet Explorer"
 }
